.playwright-cli/console-2026-05-25T18-06-10-098Z.log
[     660ms] [WARNING] You are using the in-browser Babel transformer. Be sure to precompile your scripts for production - https://babeljs.io/docs/setup/ @ https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:2
[     671ms] SyntaxError: /Inline Babel script: Unexpected token, expected "}" (294:23)

  292 |       <style>{__TWEAKS_STYLE}
  293 | /* === Chat Rich Components === */
> 294 | .msg-component { margin: 8px 0; }
      |                        ^
  295 |
  296 | /* Career Versions Timeline */
  297 | .career-versions {
    at e (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:260002)
    at r.raise (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:312098)
    at r.unexpected (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:312532)
    at r.expect (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:317386)
    at r.jsxParseExpressionContainer (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:351388)
    at r.jsxParseElementAt (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:353016)
    at r.jsxParseElementAt (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:352788)
    at r.jsxParseElement (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:353697)
    at r.parseExprAtom (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:353842)
    at r.parseExprSubscripts (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:477958)
    at r.parseUpdate (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:477579)
    at r.parseMaybeUnary (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:477193)
    at r.parseMaybeUnaryOrPrivate (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:473986)
    at r.parseExprOps (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:474096)
    at r.parseMaybeConditional (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:473566)
    at r.parseMaybeAssign (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:472472)
    at https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:392819
    at r.tryParse (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:317491)
    at r.parseMaybeAssign (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:392763)
    at https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:472052
    at r.allowInAnd (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:505261)
    at r.parseMaybeAssignAllowIn (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:472021)
    at r.parseMaybeAssignAllowInOrVoidPattern (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:506860)
    at r.parseParenAndDistinguishExpression (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:490455)
    at r.parseParenAndDistinguishExpression (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:395143)
    at r.parseExprAtom (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:483024)
    at r.parseExprAtom (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:353993)
    at r.parseExprSubscripts (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:477958)
    at r.parseUpdate (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:477579)
    at r.parseMaybeUnary (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:477193)
    at r.parseMaybeUnaryOrPrivate (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:473986)
    at r.parseExprOps (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:474096)
    at r.parseMaybeConditional (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:473566)
    at r.parseMaybeAssign (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:472472)
    at r.parseMaybeAssign (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:393896)
    at r.parseExpressionBase (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:471593)
    at https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:471500
    at r.allowInAnd (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:505219)
    at r.parseExpression (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:471469)
    at r.parseReturnStatement (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:519527)
    at r.parseStatementContent (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:512445)
    at r.parseStatementLike (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:511686)
    at r.parseStatementLike (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:379262)
    at r.parseStatementListItem (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:511262)
    at r.parseBlockOrModuleBlockBody (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:523529)
    at r.parseBlockBody (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:523339)
    at r.parseBlock (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:523037)
    at r.parseFunctionBody (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:499216)
    at r.parseFunctionBody (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:378594)
    at r.parseFunctionBodyAndFinish (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:498844)
[     761ms] [ERROR] Failed to load resource: the server responded with a status of 404 (Not Found) @ http://localhost:8080/favicon.ico:0
